opam-version: "2.0"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [ "Markus Mottl <markus.mottl@gmail.com>" ]
license: "LGPL-2.1+ with OCaml linking exception"
homepage: "https://mmottl.github.io/gpr"
doc: "https://mmottl.github.io/gpr/api"
dev-repo: "git+https://github.com/mmottl/gpr.git"
bug-reports: "https://github.com/mmottl/gpr/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.04"}
  "dune" {build & >= "1.7.0"}
  "base-threads"
  "core" {>= "0.9.1"}
  "lacaml" {>= "11.0.0"}
  "gsl" {>= "1.24.0"}
]

synopsis: "GPR - Library and Application for Gaussian Process Regression"

description: """
Gaussian process regression is a modern Bayesian approach to machine learning,
and GPR implements some of the latest advances in this field."""
